--- a/avito/tm-backend-trainee/docker-compose.yml
+++ b/avito/tm-backend-trainee/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   db:
-    image: postgres:12.8-alpine
+    image: postgres:13-alpine
     restart: always
     environment:
       POSTGRES_PASSWORD: postgres
@@ -11,7 +11,11 @@ services:
   app:
     build:
       context: '.'
+    restart: always
+    depends_on:
+      - db
     environment:
-      DJANGO_SETTINGS_MODULE: 'avito.settings_docker'
+      DJANGO_SETTINGS_MODULE: 'config.settings_docker'
     ports:
       - '8000:80'
+    command: ["./docker/wait-for-it.sh", "db:5432", "--", "./docker/runserver.sh"]
